[gd_scene load_steps=5 format=2]

[ext_resource path="res://UI/Background.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/Fonts/default_font_deutsch_gothic.tres" type="DynamicFont" id=2]
[ext_resource path="res://MainMenu/BasicButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://MainMenu/MainMenu.gd" type="Script" id=5]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="Background" parent="." instance=ExtResource( 1 )]

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1278.0
margin_bottom = 253.0
color = Color( 0, 0, 0, 0.658824 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer"]
margin_right = 1280.0
margin_bottom = 200.0
rect_min_size = Vector2( 0, 200 )
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "
[center] 'Neath the Moonlight Shadow"
text = "
 'Neath the Moonlight Shadow"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 432.0
margin_right = 1280.0
margin_bottom = 492.0
size_flags_horizontal = 3
size_flags_vertical = 6
size_flags_stretch_ratio = 8.89

[node name="Control4" type="Control" parent="VBoxContainer/HBoxContainer"]
margin_right = 179.0
margin_bottom = 60.0
size_flags_horizontal = 3

[node name="Credits" parent="VBoxContainer/HBoxContainer" instance=ExtResource( 4 )]
margin_left = 183.0
margin_right = 362.0
text = "CREDITS"

[node name="Control3" type="Control" parent="VBoxContainer/HBoxContainer"]
margin_left = 366.0
margin_right = 546.0
margin_bottom = 60.0
size_flags_horizontal = 3

[node name="Start" parent="VBoxContainer/HBoxContainer" instance=ExtResource( 4 )]
margin_left = 550.0
margin_right = 729.0
text = "START"

[node name="Control2" type="Control" parent="VBoxContainer/HBoxContainer"]
margin_left = 733.0
margin_right = 913.0
margin_bottom = 60.0
size_flags_horizontal = 3

[node name="Options" parent="VBoxContainer/HBoxContainer" instance=ExtResource( 4 )]
margin_left = 917.0
margin_right = 1096.0
text = "OPTIONS"

[node name="Control" type="Control" parent="VBoxContainer/HBoxContainer"]
margin_left = 1100.0
margin_right = 1280.0
margin_bottom = 60.0
size_flags_horizontal = 3

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Options" to="." method="_on_Options_pressed"]
